Update role descriptions, make /changerole work for add-ons, Fix error in Tornado.Init(), Fix black screens questionmark?

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -752,7 +752,7 @@
   "MasochistInfoLong": "(Neutrals):\\nAs the Masochist, your goal is to get attacked a few times to win.\\n\\nYou cannot be guessed, as that adds to your attack count.",
   "DoomsayerInfoLong": "(Neutrals):\\nThe Doomsayer can guess the role of a certain player during the meeting.\\nIf the Doomsayer guesses a certain number of roles (the number depends on the host settings) then he wins.\\nThe guessing command is: /bt [player id] [role]\\nYou can see the player's id before the player's name, or use the /id command to view the id of all players.",
   "LastImpostorInfoLong": "(Add-ons):\\nLast Impostor gets reduced kill cooldown.",
-  "LoversInfoLong": "(Add-ons),\\nLovers win together and die together if one is exiled or killed. They can see the ♥ mark next to each other's name.",
+  "LoversInfoLong": "(Add-ons),\\nLovers win together and may die together if one is exiled or killed. They can see the ♥ mark next to each other's name. If one of the lovers win at the end, the other wins too.",
   "MadmateInfoLong": "(Add-ons):\\nMadmates assist the Impostors in winning the game. They are only available to Crewmates but can identify Impostors depending on the host's settings. Certain roles like Sheriff, Snitch, and Mayor can become Madmates. The abilities of some roles change when they become Madmates. For example, the Grenadier's flash bomb works on Crewmates and Neutrals instead of Impostors. The Judge can judge anyone.",
   "NtrInfoLong": "(Add-ons):\\nWhen there is Neptune, all players will see that they are Lovers with Neptune, and they will not die in love together and will not change the win conditions. Note: Lovers won't become Neptune, and Neptune won't become Lovers.",
   "WatcherInfoLong": "(Add-ons):\\nDuring the meeting, Watcher can see everyone's votes.",
@@ -1663,7 +1663,7 @@
   "UndertakerInfoLong": "(Impostors):\\nAs the Undertaker, you can mark your target using your kill button, then shapeshift/pet to kill them. However, the person you assassinate will teleport to your location when you shapeshift, so their body will be wherever you are! Use this well to hide bodies!",
   "Romantic": "Romantic",
   "RomanticInfo": "Select your partner and win with them",
-  "RomanticInfoLong": "(Neutral):\\nAs the Romantic, you can first use your kill button on someone to select them as your partner.\\nAfter that, as long as both you and your partner are alive, you can use your kill button on anyone to give your partner a temporarily shield. If your partner wins, you win too.\\n\\nIf your partner dies, your role will change according to the following conditions:\\nIf your partner was a Neutral Killer, you will turn into the Ruthless Romantic, which is a basic neutral killer: Be the last one standing to win. If you win, your partner wins too.\\nIf your target was an Impostor, you become a Refugee. Your job is now to help the impostors (and thus your partner) win.\\nIn every other case, you become the Vengeful Romantic. Your goal is to kill the killer of your partner. If you do so, you and your partner win with the winning team. If you try to kill anyone else, you will die.",
+  "RomanticInfoLong": "(Neutral):\\nAs the Romantic, you can first use your kill button on someone to select them as your partner.\\nAfter that, as long as both you and your partner are alive, you can use your kill button on anyone to give your partner a temporarily shield. If your partner wins, you win too.\\n\\nIf your partner dies, your role will change according to the following conditions:\\nIf your partner had a kill button of any type, you will get the same role as they were.\\nIf your partner was a Non-Killing Neutral or your partner died by themselves (suicided or has no real killer), you will turn into the Ruthless Romantic, which is a basic neutral killer: Be the last one standing to win. If you win, your partner wins too.\\nIf your target was an Impostor, you become a Refugee. Your job is now to help the impostors (and thus your partner) win.\\nIn every other case, you become the Vengeful Romantic. Your goal is to kill the killer of your partner. If you do so, you and your partner win with the winning team. If you try to kill anyone else, you will die.",
   "VengefulRomantic": "Vengeful Romantic",
   "VengefulRomanticInfo": "Kill the killer of your Partner",
   "VengefulRomanticInfoLong": "(Neutral):\\nAs Vengeful Romantic you need to  kill the killer of your partner. You only get one shot. If you kill wrong player, you misfire. Upon killing the right target you win with the winning team along with your Romantic Partner",
@@ -2797,6 +2797,7 @@
   "EveryoneCanVent": "Everyone Can Vent",
   "OverrideScientistBasedRoles": "Also Override Scientist Based Roles to Engineer",
   "WhackAMole": "Whack-A-Mole",
+  "SpawnAdditionalRefugeeOnImpsDead": "Random <#8cffff>Crewmate</color> Turns To <#ff1919>Refugee</color> When All <#ff1919>Impostors</color> Die",
   "NoPetActionMsg1": "You just ate a cookie",
   "NoPetActionMsg2": "You look around",
   "NoPetActionMsg3": "You start wondering whether you are sus or not",
