Start Randomizer, Clean up Amnesiac & CustomRolesHelper

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2310,7 +2310,8 @@
   "OneNeutralRemain": "1 <color=#ffab1b>Neutral</color> remains",
   "IsGood": "{0} was a <color=#8cffff>good guy</color>",
   "BelongTo": "{0} belongs to {1}",
-  "GG": "GG! No more killers remain.",
+  "GG": "GG! No more killers remain. <#8cffff>Crewmates</color> win!",
+  "IWonderWhatsLeft": "<#ff1919>Impostors</color> are dead, but <#ffab1b>Neutrals</color> may remain.",
   "GameOverReason.HumansByVote": "<color=#8cffff>All <color=#ff1919>Impostors</color> and <color=#ffab1b>Neutral Killers</color> were ejected or killed</color>",
   "GameOverReason.HumansDisconnect": "<color=#777777>Crewmates disconnected</color>",
   "GameOverReason.ImpostorByKill": "<color=#ff1919>The Impostors killed everyone</color>",
@@ -2421,6 +2422,9 @@
   "KamikazeInfo": "Mark Players That Die With You",
   "KamikazeInfoLong": "(Impostors):\\nAs the Kamikaze, you can mark players by clicking your kill button once on them. When you die, all players that you marked will also die. You can kill normally by double clicking your kill button on someone.",
   "KamikazeMarkCD": "Cooldown After Marking",
+  "Randomizer": "Randomizer",
+  "RandomizerInfo": "stuff's 'boutta get wonky.",
+  "RandomizerInfoLong": "(Crewmates):\\nThis is basically a full chaotic role. Random events happen to you or to every player every X seconds. These effects can range from anything like super speed, through inverted controls and sniper shots all the way to time bombs and complete blindness.\\n\\nHave fun!\\n- The Dev",
   "Jailor": "Jailor",
   "JailorInfo": "Lock up your target in Jail",
   "JailorInfoLong": "(Crewmates):\\nAs the Jailor, use your kill button to lock a player in jail. Jailed players cannot be guessed or judged and jailed players can only guess Jailor.",
