21/40 Randomizer stuff done

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1643,6 +1643,7 @@
   "DeathReason.Demolished": "Demolished",
   "DeathReason.YinYanged": "Yin Yanged",
   "DeathReason.Kamikazed": "Kamikazed",
+  "DeathReason.RNG": "RNG",
   "DeathReason.etc": "Other",
   "DeathReason.Hack": "Hacked",
   "DeathReason.Curse": "Cursed",
@@ -2425,6 +2426,7 @@
   "Randomizer": "Randomizer",
   "RandomizerInfo": "stuff's 'boutta get wonky.",
   "RandomizerInfoLong": "(Crewmates):\\nThis is basically a full chaotic role. Random events happen to you or to every player every X seconds. These effects can range from anything like super speed, through inverted controls and sniper shots all the way to time bombs and complete blindness.\\n\\nHave fun!\\n- The Dev",
+  "RNGHasSpoken": "RNG has spoken",
   "Jailor": "Jailor",
   "JailorInfo": "Lock up your target in Jail",
   "JailorInfoLong": "(Crewmates):\\nAs the Jailor, use your kill button to lock a player in jail. Jailed players cannot be guessed or judged and jailed players can only guess Jailor.",
