Finish Randomizer, Remove Ghoul

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -299,7 +299,6 @@
   "Diseased": "Diseased",
   "Antidote": "Antidote",
   "Swift": "Swift",
-  "Ghoul": "Ghoul",
   "Prefix.Ntr": "Neptune",
   "Prefix.Watcher": "Watcher",
   "Prefix.Sleuth": "Sleuth",
@@ -348,7 +347,6 @@
   "Prefix.Antidote": "Antidote",
   "Prefix.Swift": "Swift",
   "Prefix.Unlucky": "Unlucky",
-  "Prefix.Ghoul": "Ghoul",
   "Prefix.Sunglasses": "Sunglasses",
   "Prefix.Mare": "Mare",
   "BracketAddons": "Add Brackets To Add-ons",
@@ -574,7 +572,6 @@
   "AntidoteInfo": "Decrease your killer's cooldown",
   "SwiftInfo": "Your kills don't cause a lunge",
   "UnluckyInfo": "Everything has a chance to kill you",
-  "GhoulInfo": "Kill your killer after dying",
   "SunglassesInfo": "You have reduced vision",
   "BusyInfo": "You have more tasks",
   "GMInfo": "Spectate the chaos!",
@@ -807,7 +804,6 @@
   "SwiftInfoLong": "(Add-ons):\\nAs the Swift, your kills will not cause you to lunge.",
   "UndeadInfoLong": "(Add-ons):\\nThis add-on is given to players that have been recruited by the Necromancer and the Deathknight to the Undead faction.",
   "UnluckyInfoLong": "(Add-ons):\\nAs the Unlucky, doing tasks, killing, or venting as a chance to kill you.",
-  "GhoulInfoLong": "(Add-ons):\\nAs the Ghoul, one of two outcomes can occur on task completion.\\n\\nIf alive: Suicide\\nIf dead: You kill your killer if they're alive.\\n\\nOnly assigned to crewmates, and not crewmates with no tasks or are task-based.",
   "SunglassesInfoLong": "(Add-ons):\\nAs the Sunglasses, your vision is reduced.",
   "GMInfoLong": "(None):\\nThe Game Master is an observer role.\\nTheir presence has no effect on the game, and all players know who the Game Master is. The Game Master role will be assigned to the host, who will automatically become a ghost at the start of the game.",
   "SunnyboyInfoLong": "(Neutrals):\\nThe Sunnyboy can check the life status of others through the life panel. When the Sunnyboy is alive, the game will not end due to a numerical advantage (for example, the number of Impostors is greater than the crew or there are no survivors). If the Sunnyboy dies at the end of the game, the Sunnyboy will win with the winning team.",
@@ -2427,6 +2423,10 @@
   "RandomizerInfo": "stuff's 'boutta get wonky.",
   "RandomizerInfoLong": "(Crewmates):\\nThis is basically a full chaotic role. Random events happen to you or to every player every X seconds. These effects can range from anything like super speed, through inverted controls and sniper shots all the way to time bombs and complete blindness.\\n\\nHave fun!\\n- The Dev",
   "RNGHasSpoken": "RNG has spoken",
+  "RandomizerEffectFrequency": "Random Effect Frequency",
+  "RandomizerEffectDurMin": "Minimum Effect Duration",
+  "RandomizerEffectDurMax": "Maximum Effect Duration",
+  "RandomizerNotifyOpt": "Notify When RNG Event Happens (turn off if events are frequent)",
   "Jailor": "Jailor",
   "JailorInfo": "Lock up your target in Jail",
   "JailorInfoLong": "(Crewmates):\\nAs the Jailor, use your kill button to lock a player in jail. Jailed players cannot be guessed or judged and jailed players can only guess Jailor.",
