Enhance Randomizer, /s for moderators

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1696,7 +1696,7 @@
   "WitnessTime": "Max Time after killing where killer appears red",
   "WitnessButtonText": "Examine",
   "WitnessFoundInnocent": "<size=3><color=#00ff00>✓</color></size>",
-  "WitnessFoundKiller": "<size=3><color=#ffff00>!!</color></size>",
+  "WitnessFoundKiller": "<size=3><color=#ffff00>⚠</color></size>",
   "DeadlyQuota": "Deadly Quota",
   "DeadlyQuotaInfo": "You don't win if you didn't kill enough",
   "DeadlyQuotaInfoLong": "(Add-ons):\\nDeadly Quota is an add-on that only impostors can get. The holder of this add-on will need to get a specified amount of kills (or more) to be able to win. If their win condition triggers before getting a required amount of kills, the player loses even if they were supposed to win.",
@@ -2013,6 +2013,7 @@
   "DeathCommand": "<#ffffff>You were killed by </color>{0}<#ffffff>\\nTheir role is </color>{1}",
   "DefaultSystemMessageTitle": "[ ★ System message ★ ]",
   "MessageFromTheHost": "[ ★ Host message ★ ]",
+  "SayTitle": "[ ★ Moderator message ★ ]",
   "MessageFromEAC": "[ ★ EAC ★ ]",
   "DetectiveNoticeTitle": "[ ★ Message for the Detective ★ ]",
   "GuessKillTitle": "[ ★ Message about Guessing ★ ]",
