DONE (100%) ---- Just some cleanup left to do.

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2678,7 +2678,7 @@
   "PlagueDoctorInfectWhenKilled": "Infect Killer When Killed",
   "PlagueDoctorInfectTime": "Infect Time",
   "PlagueDoctorInfectDistance": "Infect Distance",
-  "PlagueDoctorInfectInactiveTime": "Infect Invalid Time",
+  "PlagueDoctorInfectInactiveTime": "Meeting Infection Onset Delay",
   "PlagueDoctorCanInfectSelf": "Can Infect Self",
   "PlagueDoctorCanInfectVent": "Can Infect While In Vent",
   "Enderman": "Enderman",
