Fix bugs (still a lot to go)

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2429,6 +2429,16 @@
   "RandomizerEffectDurMax": "Maximum Effect Duration",
   "RandomizerNotifyOpt": "Notify When RNG Event Happens (turn off if events are frequent)",
   "MadmateCanFindMarshall": "Reveal to <#ff1919>MadMates</color>",
+  "DoesntSpawnOnFungle": "Doesn't Spawn When the Map is <color=#ffa646>Fungle</color>",
+  "DGRM.None": "None",
+  "DGRM.OnMeeting": "On Meeting",
+  "DGRM.AfterTime": "Timer",
+  "DGResetMode": "Skin Reset Mode",
+  "DGResetTimer": "If Resetting Skin by Timer, Reset Skin After",
+  "RememberMode": "Role Remembering Mode",
+  "AmnesiacRM.ByKillButton": "By Kill Button",
+  "AmnesiacRM.ByReportingBody": "By Report",
+  "ReportBaitAtAllCost": "Report <#00f7ff>Bait</color> at All Cost",
   "Jailor": "Jailor",
   "JailorInfo": "Lock up your target in Jail",
   "JailorInfoLong": "(Crewmates):\\nAs the Jailor, use your kill button to lock a player in jail. Jailed players cannot be guessed or judged and jailed players can only guess Jailor.",
