--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2434,6 +2434,7 @@
   "DGRM.OnMeeting": "On Meeting",
   "DGRM.AfterTime": "Timer",
   "DoppelMaxSteals": "Maximum Steals",
+  "DumpLogAfterGameEnd": "Dump Log After Each Game End (Recommended)",
   "DGResetMode": "Skin Reset Mode",
   "DGResetTimer": "If Resetting Skin by Timer, Reset Skin After",
   "RememberMode": "Role Remembering Mode",
