Fix a lot of errors

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1496,6 +1496,7 @@
   "KB_BootVentWhenDead": "Boot players who get stuck in the vent (may trigger official anti cheating)",
   "JudgeTryHideMsg": "Hide <color=#f8d85a>Judge</color>'s commands",
   "TrialLimitPerMeeting": "Max Trials per Meeting",
+  "TrialLimitPerGame": "Max Trials per Game",
   "JudgeCanTrialMadmate": "Can trial <color=#ff1919>Madmates</color>",
   "JudgeCanTrialCharmed": "Can trial <color=#cf6acd>Charmed</color> players",
   "VeteranSkillMaxOfUseage": "(Initial) Max number of Alerts",
@@ -3045,6 +3046,18 @@
   "SecurityGuardSkillStop": "Ability expired",
   "BusyLongTasks": "Amount of Extra Long Tasks",
   "BusyShortTasks": "Amount of Extra Short Tasks",
+  "Changeling": "Changeling",
+  "ChangelingInfo": "Pick Your Impostor Role!",
+  "ChangelingInfoLong": "(Impostors):\\nAs the Changeling, you can vent/pet to cycle between the available impostor roles. You can see the currently selected role below your name. Select the role you want to play as, then shapeshift to confirm your choice. Your role will be changed to the role you selected.",
+  "CL.All": "All",
+  "CL.AllImp": "All Regular Imp-Based",
+  "CL.AllSS": "All Shapeshifter-Based",
+  "CL.Enabled": "Enabled",
+  "CL.EnabledImp": "Enabled Regular Imp-Based",
+  "CL.EnabledSS": "Enabled Shapeshifter-Based",
+  "CanPickPartnerRole": "Can Pick Roles that Already Exist in the Game",
+  "CanKillBeforeRoleChange": "Can Kill Before Picking a Role",
+  "AvailableRoles": "Available Impostor-Teamed Role List to Choose From",
   "Doormaster": "Door Master",
   "DoormasterInfo": "Open All Doors Anytime",
   "DoormasterInfoLong": "(Crewmates):\\nAs the Door Master, you can vent/pet to open all closed doors.\\n\\nDue to technical difficulties, this may not work on some maps.",
