--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -933,6 +933,8 @@
   "GhostCanSeeDeathReason": "Ghost Can See Cause Of Death",
   "GhostIgnoreTasks": "Ghosts Exempt From Tasks",
   "DisableTaskWin": "Disable Task Win",
+  "DisableTaskWinIfAllCrewsAreDead": "Disable Task Win If All <#8cffff>Crewmates</color> Are Dead",
+  "CanSabotage": "Can Sabotage",
   "HideGameSettings": "Hide Game Settings",
   "DIYGameSettings": "Enable only custom /n messages",
   "PlayerCanSetColor": "Players can use the /color command",
@@ -1261,6 +1263,7 @@
   "CanTerroristSuicideWin": "Can Win By Suicide",
   "FireWorksMaxCount": "Fireworks Count",
   "FireWorksRadius": "Firework Explosion Radius",
+  "CanIgniteBeforePlacingAllFireworks": "Can Blow Up Installed Fireworks Before Placing Them All",
   "SniperBulletCount": "Ammo",
   "SniperPrecisionShooting": "Precise Shooting",
   "SniperAimAssist": "Aim Assist",
@@ -3081,6 +3084,7 @@
   "BlackmaileKillTitle": "<color=#ffff00>WARNING</color>",
   "BlackmailerShutUp": "Shush! You'll die if you keep talking.",
   "BlackmailerMax": "Maximum times blackmailed players may speak",
+  "BlackmailerSkillCooldown": "Ability Cooldown",
   "Doppelganger": "Doppelganger",
   "DoppelgangerInfo": "Steal The Identify of Your Target",
   "DoppelgangerInfoLong": "(Neutrals):\\nAs the Doppelganger, use your kill button to steal a player's identity (their name and skin) and then kill your target.\\n\\nKill everyone to win.\\n\\nNote:- You can not steal the identity of the target when Camouflage is active.\",\",\",\"\nDoppelMaxSteals\"",
@@ -3190,6 +3194,12 @@
   "PhysicistInfo": "Grants Portable Vitals Access",
   "PhysicistInfoLong": "\\nGrants portable vitals access for crewmate roles.",
   "Prefix.Physicist": "Physicist",
+  "Tiger": "Tiger",
+  "TigerInfo": "Enrage to Kill Additional Players",
+  "TigerInfoLong": "(Neutrals):\\nAs the Tiger, you can sabotage/pet your pet to become enraged. If you kill while you're enraged, the next closest player (within a radius) to your kill also dies.",
+  "EnrageCooldown": "Enrage Cooldown",
+  "EnrageDuration": "Enrage Duration",
+  "TigerRadius": "Enrage Radius",
   "Agitater": "Agitator",
   "AgitaterInfo": "Pass a Bomb onto others",
   "AgitaterInfoLong": "(Neutrals):\\nAs the Agitater, your premise is essentially Hot Potato.\\n\\nUse your kill button on a player to pass the bomb.\\nThis can only be done once per round.\\n\\nThe player who receives the bomb will be notified when receiving said bomb, in which they need to pass it to another player by getting near a player.\\n\\nWhen a meeting is called, the player with the bomb dies.\\n\\nIf trying to pass to Pestilence or a Veteran on alert, the bombed player dies instead.\\nOptionally, the Agitater cannot receive the bomb.",
