--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3660,6 +3660,7 @@
   "WinnerRoleText.Hookshot": "Hookshot Wins!",
   "WinnerRoleText.Sprayer": "Sprayer Wins!",
   "WinnerRoleText.SoulHunter": "Soul Hunter Wins!",
+  "WinnerRoleText.Tiger": "Tiger Wins!",
   "AdditionalWinnerRoleText.Sidekick": "along with Sidekicks",
   "AdditionalWinnerRoleText.Opportunist": "The Opportunist survived",
   "AdditionalWinnerRoleText.Lawyer": "The Lawyer wins along",
