--- a/Resources/Lang/pt_BR.json
+++ b/Resources/Lang/pt_BR.json
@@ -3660,7 +3660,7 @@
   "WinnerRoleText.Hookshot": "Vitória do Enganchador!",
   "WinnerRoleText.Sprayer": "Vitória do Emboscador!",
   "WinnerRoleText.SoulHunter": "Vitória do Ceifador de Almas!",
-  "WinnerRoleText.Tiger": "Tiger Wins!",
+  "WinnerRoleText.Tiger": "Vitória do Tigre!",
   "AdditionalWinnerRoleText.Sidekick": "Ajudante",
   "AdditionalWinnerRoleText.Opportunist": "Oportunista",
   "AdditionalWinnerRoleText.Lawyer": "Advogado",
