Make SetupCustomOption() get called automatically

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2844,12 +2844,12 @@
   "NoPetActionMsg11": "You perform a quick dance move to entertain your pet.",
   "NoPetActionMsg12": "You start a one-person conga line around the reactor.",
   "NoPetActionMsg13": "You mime fixing a non-existent spaceship engine.",
-  "NoPetActionMsgImp": "You are an Impostor, but you probably know that",
+  "NoPetActionMsgImp1": "You are an Impostor, but you probably know that",
   "NoPetActionMsgImp2": "You debate whether space pizza or space burgers would make a better crewmate meal.",
   "NoPetActionMsgCrewTaskDone": "You are free",
   "NoPetActionMsgCrewWithTasksLeft": "You realize you still have tasks to do",
   "NoPetActionMsgCrew": "You imagine yourself as the impostor in a parallel universe.",
-  "NoPetActionMsgNeutral": "You imagine yourself as the impostor in a parallel universe.",
+  "NoPetActionMsgNeutral1": "You imagine yourself as the impostor in a parallel universe.",
   "NoPetActionMsgNeutral2": "You question yourself how did you get here",
   "TruantWaitingTime": "Waiting Time After Meetings",
   "WMMode": "<color=#00ffa5>Mode:</color> <color=#ffffff><b>{0}</b></color>",
@@ -3661,6 +3661,7 @@
   "WinnerRoleText.Sprayer": "Sprayer Wins!",
   "WinnerRoleText.SoulHunter": "Soul Hunter Wins!",
   "WinnerRoleText.Tiger": "Tiger Wins!",
+  "WinnerRoleText.Default": "{0} Wins!",
   "AdditionalWinnerRoleText.Sidekick": "along with Sidekicks",
   "AdditionalWinnerRoleText.Opportunist": "The Opportunist survived",
   "AdditionalWinnerRoleText.Lawyer": "The Lawyer wins along",
