Add Freezer, Predator, Markseeker, fix strings, fix bugs, tiebreaker vote manipulation shows on ejection screen

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3080,7 +3080,7 @@
   "SpyRedNameDur": "Colored Name Duration",
   "Blackmailer": "Blackmailer",
   "BlackmailerInfo": "Shapeshift to Silence Players",
-  "BlackmailerInfoLong": "(Impostors):\\nAs the Blackmailer, when you shift into a target you will blackmail that player, and the blackmailed player cannot speak.\\n\\nSpeaking by the blackmailed player will trigger the confusion command, please do not speak when the blackmailed player sees his icon\",\",\",\"\nBlackmailerSkillCooldown\"",
+  "BlackmailerInfoLong": "(Impostors):\\nAs the Blackmailer, when you shift into a target you will blackmail that player, and the blackmailed player cannot speak.\\n\\nSpeaking by the blackmailed player will trigger the confusion command, please do not speak when the blackmailed player sees his icon.",
   "BlackmailerDead": "<b>{0}</b> has been blackmailed by a <color=#ff1919>Blackmailer</color>!",
   "BlackmaileKillTitle": "<color=#ffff00>WARNING</color>",
   "BlackmailerShutUp": "Shush! You'll die if you keep talking.",
@@ -3088,7 +3088,7 @@
   "BlackmailerSkillCooldown": "Ability Cooldown",
   "Doppelganger": "Doppelganger",
   "DoppelgangerInfo": "Steal The Identify of Your Target",
-  "DoppelgangerInfoLong": "(Neutrals):\\nAs the Doppelganger, use your kill button to steal a player's identity (their name and skin) and then kill your target.\\n\\nKill everyone to win.\\n\\nNote:- You can not steal the identity of the target when Camouflage is active.\",\",\",\"\nDoppelMaxSteals\"",
+  "DoppelgangerInfoLong": "(Neutrals):\\nAs the Doppelganger, use your kill button to steal a player's identity (their name and skin) and then kill your target.\\n\\nKill everyone to win.\\n\\nNote:- You can not steal the identity of the target when Camouflage is active.",
   "Tether": "Tether",
   "TetherInfo": "Teleport to your target",
   "TetherInfoLong": "(Crewmates):\\nAs the Tether, you may vote someone in a meeting to make them your target. In the next round, you can vent/pet to teleport to them anytime.\\nYour targets reset every meeting.",
@@ -3098,9 +3098,9 @@
   "AidInfoLong": "(Crewmates):\\nAs the Aid, you may use your kill button on someone to protect them from direct attacks temporarily. Neither you nor your target will know if someone tried to kill your target.",
   "AidDur": "Shield Duration",
   "AidCD": "Shield Cooldown",
-  "GuessManager": "Guess Manager",
-  "GuessManagerInfo": "Receive Additional Info About Guesses",
-  "GuessManagerInfoLong": "(Crewmates):\\nAs the Guess Manager, you know the roles of guessed players, and if someone misguesses, you'll see that.",
+  "GuessManagerRole": "Guess Manager",
+  "GuessManagerRoleInfo": "Receive Additional Info About Guesses",
+  "GuessManagerRoleInfoLong": "(Crewmates):\\nAs the Guess Manager, you know the roles of guessed players, and if someone misguesses, you'll see that.",
   "GuessManagerMessageAboutMisguess": "<b>{0}</b> misguessed.",
   "GuessManagerMessageAboutGuessedRole": "Their role was <b>{0}</b>",
   "Benefactor": "Benefactor",
@@ -3195,6 +3195,21 @@
   "PhysicistInfo": "Grants Portable Vitals Access",
   "PhysicistInfoLong": "\\nGrants portable vitals access for crewmate roles.",
   "Prefix.Physicist": "Physicist",
+  "Freezer": "Freezer",
+  "FreezerInfo": "Freeze Players",
+  "FreezerInfoLong": "(Impostors):\\nAs the Freezer, you can shapeshift into a player to freeze them. The frozen player cannot move for a set amount of time.",
+  "FreezeDuration": "Freeze Duration",
+  "FreezeCooldown": "Freeze Cooldown",
+  "Predator": "Predator",
+  "PredatorInfo": "Eliminate Specific Roles",
+  "PredatorInfoLong": "(Neutrals):\\nAs the Predator, you must kill one player that has one of the roles listed below your name. If you succeed to do so, you'll win with the winning team at the end. If you kill someone who doesn't have one of the roles listed below your name, you'll die.",
+  "PredatorCorrectKill": "Successful kill! They were {0}.",
+  "NumOfRolesToKill": "Amount of Roles to Choose From",
+  "MaxImpRolePicks": "Maximum Number of Impostor Roles to Choose From",
+  "PredatorDone": "You've done your job.\\nYou'll win with the winning team at the end.",
+  "Markseeker": "Markseeker",
+  "MarkseekerInfo": "Predict Someone's Role",
+  "MarkseekerInfoLong": "(Crewmates):\\nAs the Markseeker, your first vote will mark the voting target as your target. When you die, the role of your target will be revealed to everyone.",
   "Tiger": "Tiger",
   "TigerInfo": "Enrage to Kill Additional Players",
   "TigerInfoLong": "(Neutrals):\\nAs the Tiger, you can sabotage/pet your pet to become enraged. If you kill while you're enraged, the next closest player (within a radius) to your kill also dies.",
