Role subcategories finished (you're welcome)

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -64,10 +64,11 @@
   "NeutralAddonSettings": "Can guess <color=#ffab1b>Neutral</color> add-ons",
   "BasicAddonSettings": "Can guess global add-ons",
   "ROT.Impostor": "★ Impostor Roles",
+  "ROT.MadMates": "★ Madmate Roles",
   "ROT.Crewmate_Normal": "★ Non-Killing Crewmate Roles",
-  "ROT.Crewmate_ImpostorBased": "★ Killing Crewmate Roles",
+  "ROT.Crewmate_ImpostorBased": "★ Crewmate Roles With Kill Buttons",
   "ROT.Neutral_NonKilling": "★ Non-Killing Neutral Roles",
-  "ROT.Neutral_Killing": "★ Killing Neutral Roles",
+  "ROT.Neutral_Killing": "★ Neutral Killing Roles",
   "ROT.Vanilla": "★ Vanilla Roles",
   "ROT.Basic": "★ Basic Roles",
   "ROT.BasicNK": "★ Basic Neutral Killing Roles",
