Add Mischievous (add-on), Vision & Speed setting step changed to 0.05x

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -258,6 +258,7 @@
   "Ntr": "Neptune",
   "Watcher": "Watcher",
   "Sleuth": "Sleuth",
+  "Mischievous": "Mischievous",
   "Flashman": "Flash",
   "Undead": "Undead",
   "Busy": "Busy",
@@ -312,6 +313,7 @@
   "Prefix.Ntr": "Neptune",
   "Prefix.Watcher": "Watcher",
   "Prefix.Sleuth": "Sleuth",
+  "Prefix.Mischievous": "Mischievous",
   "Prefix.Flashman": "Flash",
   "Prefix.Undead": "Undead",
   "Prefix.Busy": "Busy",
@@ -563,6 +565,7 @@
   "AsthmaticInfo": "Stop And Go",
   "MagnetInfo": "Pull your victims to you",
   "SleuthInfo": "Know the roles of the bodies you report",
+  "MischievousInfo": "You can sabotage",
   "UnreportableInfo": "Your body can't be reported",
   "RogueInfo": "Work against your team and win with other Rogues",
   "LuckyInfo": "Dodge attackers",
@@ -765,6 +768,7 @@
   "WatcherInfoLong": "(Add-ons):\\nDuring the meeting, Watcher can see everyone's votes.",
   "MagnetInfoLong": "(Add-ons):\\nWhen you kill, your victims lunge to you, instead of you lunging to them",
   "SleuthInfoLong": "(Add-ons):\\nYou know the roles of the bodies you report.",
+  "MischievousInfoLong": "(Add-ons):\\nYou can sabotage.",
   "FlashmanInfoLong": "(Add-ons):\\nThe Flash is faster by default.",
   "GiantInfoLong": "(Add-ons):\\nThe Giant is slower by default.",
   "BusyInfoLong": "(Add-ons):\\nYou have more tasks.",
